--- a/package.json
+++ b/package.json
@@ -12,41 +12,72 @@
   "dependencies": {
     "@conform-to/react": "^1.4.0",
     "@conform-to/zod": "^1.4.0",
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@vercel/postgres": "^0.7.2",
     "base64-arraybuffer": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "firebase-admin": "^12.5.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
+    "next-mdx-remote": "^5.0.0",
+    "nextra": "^2.13.2",
+    "nextra-theme-blog": "^2.13.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
     "react-images-uploading": "^3.1.7",
+    "react-markdown": "^9.0.1",
+    "react-scroll": "^1.9.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "recharts": "^2.12.0",
+    "rss": "^1.2.2",
     "sharp": "^0.34.1",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0",
+    "webpack": "^5.97.1",
     "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@prisma/client": "^5.11.0",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/mdx": "^2.0.13",
+    "@types/node": "^20.11.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-scroll": "^1.8.10",
     "@types/uuid": "^10.0.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "eslint-config-prettier": "^10.1.2",
+    "postcss": "^8.4.49",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
+    "prisma": "^5.11.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
+  },
+  "prisma": {
+    "schema": "prisma/schema.prisma"
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "none",
+    "semi": false
   }
 }
