--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^5.0.1",
+    "@next/mdx": "^15.3.1",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@tailwindcss/typography": "^0.5.16",
     "@vercel/postgres": "^0.7.2",
     "base64-arraybuffer": "^1.0.2",
     "class-variance-authority": "^0.7.1",
@@ -41,6 +43,7 @@
     "react-scroll": "^1.9.0",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.12.0",
+    "remark-gfm": "^4.0.1",
     "rss": "^1.2.2",
     "sharp": "^0.34.1",
     "tailwind-merge": "^3.2.0",
@@ -58,6 +61,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-scroll": "^1.8.10",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
