サイトマップ生成スクリプトを追加し、ビルドスクリプトを更新。メタデータを変更し、レイアウトを調整。

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "supabase-blog",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build && node scripts/generate-sitemap.js",
     "start": "next start",
     "lint": "next lint",
     "prettier": "prettier --config .prettierrc --write ."
